--- a/combatemic.html
+++ b/combatemic.html
@@ -115,6 +115,10 @@
             display: none;
         }
         
+        .desc {
+            padding: 20px 10px;
+        }
+        
         @media only screen and (max-width: 600px) {
             .header-section {
                 flex-direction: column;
@@ -132,7 +136,7 @@
                 display: flex;
             }
             .desc {
-                display: flex;
+                display: none;
             }
         }
     </style>
@@ -186,8 +190,8 @@
                     </div>
                 </div>
             </div>
-            <img class="app-images" style="width:100%;" src="/Users/sangeetkumar/Downloads/app-release/phone3.jpg" />
-            <div style="padding: 20px 10px;" class="desc">
+            <img class="app-images" style="width:100%;" src="http://combatemic.live/assets/screen1.jpg" />
+            <div class="desc">
                 COMBATEMIC is a team effort by a group of developers who swore to contribute for the sake of humanity and sustenance. Our mission is to fight back any life-threatening diseases and share knowledge of News and Preventives as soon as possible.
                 <br/><br/> The contribution is from “US” To HUMANITY.
                 <br/><br/> Awareness plays a key role when medicines and treatment are not on around and we here at COMBATEMIC want to provide the best knowledge of what is happening around.
