--- a/combatemic.html
+++ b/combatemic.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Combatemic</title>
-    <meta name="keywords" content="coronavirus, covid 19, combatemic, pandemic, epidemic, diseases">
+    <meta name="keywords" content="coronavirus, covid 19, combatemic, pandemic, epidemic, diseases, coronavirus india, coronavirus india status, coronavirus india statics">
     <meta name="author" content="Combatemic">
     <meta name="description" content="COMBATEMIC is a team effort by a group of developers who swore to contribute for the sake of humanity and sustenance. Our mission is to fight back any life-threatening diseases and share knowledge of News and Preventives as soon as possible.
     The contribution is from “US” To HUMANITY.
@@ -184,20 +184,24 @@
                 <img class="image" src="https://scontent.fblr8-1.fna.fbcdn.net/v/t1.0-9/92489668_110188357313316_7344957043293290496_o.png?_nc_cat=106&_nc_sid=dd9801&_nc_ohc=K0zFbOmV4HAAX-DwwO-&_nc_ht=scontent.fblr8-1.fna&oh=ffcfe772361c9d02231600e32e9cac2e&oe=5EBCE97C"
                     width="100%" height="auto" alt="image" />
 
-                <button type="button" onclick="downloadApk()" class="btn btn-primary app-link">
+                <!-- <button type="button" onclick="downloadApk()" class="btn btn-primary app-link">
                             <i class="fa fa-android fa-2x" style="color: #101947;margin-right: 10px;" aria-hidden="true"></i>
-                            Download Combatemic App</button>
+                            Download Combatemic App</button> -->
+
+                <a href="https://combatemic.live/combatemic_v0.9.5.apk" class="btn btn-info app-link" role="button">
+                    <i class="fa fa-android fa-2x" style="color: #101947;margin-right: 10px;" aria-hidden="true"></i> Download Combatemic App
+                </a>
 
                 <!-- <div class="app-link">
                     <i class="fa fa-android fa-2x" style="color: #101947;margin-right: 10px;" aria-hidden="true"></i>
                     <div style="display: flex;flex-direction:column;">
-                        <span style="font-size: 1rem;">Free Download</span>
-                        <a class="download-icon" style="font-size: 1.5rem;" onclick="downloadApk()">Combatemic App</a>
-                        <button type="button" onclick="downloadApk()" class="btn btn-light download-icon">Combatemic App</button>
+                        <span style="font-size: 1rem;">Free Download</span> -->
+                <!-- <a class="download-icon" style="font-size: 1.5rem;" href="https://combatemic.live/combatemic_v0.9.5.apk">Combatemic App</a> -->
+                <!-- <button type="button" onclick="downloadApk()" class="btn btn-light download-icon">Combatemic App</button>
                     </div>
                 </div> -->
             </div>
-            <img class="app-images" style="width:100%;" src="http://combatemic.live/assets/screen1.jpg" />
+            <img class="app-images" style="width:100%;" src="https://combatemic.live/assets/screen1.jpg" />
             <div class="desc">
                 COMBATEMIC is a team effort by a group of developers who swore to contribute for the sake of humanity and sustenance. Our mission is to fight back any life-threatening diseases and share knowledge of News and Preventives as soon as possible.
                 <br/><br/> The contribution is from “US” To HUMANITY.
